--- a/tex/sprawozdanie.tex
+++ b/tex/sprawozdanie.tex
@@ -206,6 +206,8 @@ Liczba iteracji lokalnego przeszukiwania dla ISL:
 
 \subsection{Wnioski}
 
+Z powyżej opasanego doświadczenia wynikło, że metody ILS dają duże lepsze wyniki niż metoda MSLS. Drugim wnioskiem jest fakt, że czas wykonywania jednej iteracji ILS był ok. 5 razy szybszy niż jedna iteracja MSLS, ponieważ metoda MSLS zakłada lokalne przeszukiwanie w pełni losowego rozwiązania, a ILS stosuje lokalne przeszukiwanie dla lekko popsutego rozwiązania. Metoda ILS, gdzie permutacją była wymiana 10 wierzchołków na losowe dała lepsze wyniki niż, metoda z permutacją polegającą na usunięciu 20 procent wierzchołków i naprawieniu rozwiązania algorytmem Greedy Cycle. Możliwe, że usunięcie 20 procent wierzchołków to zbyt mocne popsucie rozwiązania.
+
 \section{Zadanie 3}
 
 \subsection{Opis zadania}
