Small fixes in raport

--- a/tex/sprawozdanie.tex
+++ b/tex/sprawozdanie.tex
@@ -69,7 +69,7 @@ Powtarzaj  dopóki nie osiągnięto określonego  czasu:
         Przygotuj puste rozwiązanie.
         Dodaj każdy punkt, który znajduje się w obu rozwiązaniach.
         Jeżeli rezultat rekombinacji jest pełny:
-            ???
+            Nic nie rób.
         W przeciwnym wypadku:
             Oblicz liczbę wierzchołków, które należy dodać.
             Przygotuj listę z wierzchołkami należącymi do pierwszego lub drugiego rozwiązania.
@@ -77,7 +77,7 @@ Powtarzaj  dopóki nie osiągnięto określonego  czasu:
             Dodaj wylosowane wierzchołki do rozwiązania.
     Wykonaj lokalne przeszukiwanie na podstawie wyniku rekombinacji.
     Posortuj listę rozwiązań.
-    Jeżeli najgorsze rozwiązanie z listy jest gorsze od uzyskanego rozwiązania i jego dystans nie powtarza się w liście rozwiązań, to usuń najgorsze rozwiązanie i dodaj uzyskane rozwiązanie.
+    Jeżeli najgorsze rozwiązanie z listy jest gorsze od uzyskanego rozwiązania i nie powtarza się w liście rozwiązań, to usuń najgorsze rozwiązanie i dodaj uzyskane rozwiązanie.
 \end{lstlisting}
 
 \subsection{Wyniki pomiarów}
